# Rust-API

./: Cargo.toml  Dockerfile  README.md
.circleci/: config.yml
src/: main.rs  tests.rs
src/auth/: auth_component.rs  auth_datastore.rs  auth_routehandler.rs  mod.rs  tests.rs
src/drivers/mongodb/: mod.rs  mongo_trait.rs
src/modules/: mod.rs
src/modules/auth_module/: auth_component.rs  mod.rs
src/modules/password_module/: component.rs  mod.rs
src/modules/record_module/: component.rs  mod.rs
src/modules/search_module/: component.rs  mod.rs
src/modules/secrets_module/: component.rs  mod.rs
src/modules/user_module/: component.rs  mod.rs
src/password_manager/: component.rs  datastore.rs  mod.rs
src/shared/: encryption.rs  env_config.rs  jwt_service.rs  mod.rs  types.rs
src/tests/: mock_data.rs  mod.rs
