[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
pwhash = "1"
mockall = "0.11.1"
magic-crypt = "3.1.10"
validator = { version = "0.15", features = ["derive"] }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.mongodb]
version = "2.2.2"
